core/traefik/middleware-cors.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors-all
  namespace: traefik
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "PUT"
      - "POST"
    accessControlMaxAge: 100
    accessControlAllowOriginList:
      - "*"
    addVaryHeader: true
