core/traefik/grafana-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-grafana
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.intra.bmw12.ch`)
      kind: Rule
      services:
        - name: grafana
          port: 80
          namespace: monitoring

  tls:
    secretName: prod-bmw12-ch-tls
