core/traefik/kubernetes-dashboard-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-kubernetes-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`dashboard.intra.bmw12.ch`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 80
          namespace: kubernetes-dashboard

  tls:
    secretName: staging-bmw12-ch-tls
