core/traefik/prometheus-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-prometheus
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prometheus.intra.bmw12.ch`)
      kind: Rule
      services:
        - name: prometheus-server
          port: 80
          namespace: monitoring
  tls:
    secretName: prod-bmw12-ch-tls
