core/traefik/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.intra.bmw12.ch`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: prod-bmw12-ch-tls
