core/traefik/whoami-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-whoami
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`whoami.intra.bmw12.ch`)
      kind: Rule
      services:
        - name: whoami
          port: 80
          namespace: whoami

  tls:
    secretName: prod-bmw12-ch-tls
